--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <img src="img/svgimg/promo.svg" alt="promo" class="promo__svg">
                 <h2 class="promo__title">Enjoy your afternoon <br> tea with a snack</h2>
                 <div class="promo__form">
-                <input class="promo__input" type="text" id="textInput" placeholder="Enter mobile number">
+                <input class="promo__input" type="tel" id="textInput" placeholder="Enter mobile number">
                 <a href="#!" class="promo_btn" id="promoLink">Send Link</a>
                 </div>
                 <div class="promo__links">
