--- a/index-ru.html
+++ b/index-ru.html
@@ -139,7 +139,7 @@
                     <img src="img/svgimg/promo.svg" alt="promo" class="promo__svg">
                     <h2 class="promo__title">Наслаждайтесь вашим <br> чаем с закуской</h2>
                     <div class="promo__form">
-                        <input class="promo__input" type="text" id="textInput" placeholder="Введите номер телефона">
+                        <input class="promo__input" type="tel" id="textInput" placeholder="Введите номер телефона">
                         <a href="#!" class="promo_btn" id="promoLink">Отправить ссылку</a>
                     </div>
                     <div class="promo__links">
